config for jstatd&jmx